# evm-bloomer

./: Cargo.toml  README.md  index.html  plot_bloom.py
.github/workflows/: daily-report.yml
reports/: latest.json  report_2025-01-23.json  report_2025-01-24.json  report_2025-02-10.json  report_2025-02-11.json  report_2025-02-12.json  report_2025-02-22.json  report_2025-03-08.json  report_2025-03-12.json  report_2025-03-13.json  report_2025-03-19.json  report_2025-03-21.json  report_2025-03-22.json  report_2025-03-23.json  report_2025-03-26.json  report_2025-04-02.json  report_2025-04-03.json  report_2025-04-05.json  report_2025-04-07.json  report_2025-04-09.json  report_2025-04-10.json  report_2025-04-12.json  report_2025-04-15.json  report_2025-04-17.json  report_2025-04-18.json  report_2025-04-20.json  report_2025-04-22.json  report_2025-05-01.json  report_2025-05-02.json  report_2025-05-04.json  report_2025-05-05.json  report_2025-05-06.json  report_2025-05-08.json  report_2025-05-09.json  report_2025-05-11.json  report_2025-05-12.json  report_2025-05-14.json  report_2025-05-17.json  report_2025-05-18.json  report_2025-05-21.json  (+92 more)
scripts/: generate-report.sh
src/: evm_bloom.rs  lib.rs  main.rs
src/asm_parser/: mod.rs  opcodes.rs  verify_project.rs
