[package]
name = "evm-bloomer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.2.0", features = ["full"] }
bit-vec = "0.8.0"
clap = { version = "4.5.9", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.30"
image = "0.25.1"
lazy_static = "1.4"
tokio = { version = "1.38.1", features = ["full"] }
walkdir = "2.5.0"
