[package]
name = "evm-bloomer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.1", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
bit-vec = { version = "0.8.0", features = ["serde"] }
eyre = "0.6.12"
futures = "0.3.31"
serde = { version = "1.0.215", "features" = ["derive"] }
serde_json = "1.0.133"
lazy_static = "1.5.0"
bitvec = { version = "1.0.1", features = ["serde"] }
rand = "0.8.5"
